spec/grammar.ebnf
(* Swibe Language EBNF Specification (v1.2) *)

program = { statement } ;

statement = function_decl
          | skill_decl
          | swarm_statement
          | secure_block
          | meta_digital_decl
          | loop_until
          | app_statement
          | struct_decl
          | resource_decl
          | enum_decl
          | trait_decl
          | impl_block
          | let_statement
          | if_statement
          | match_statement
          | mint_statement
          | receipt_statement
          | seal_statement
          | walrus_statement
          | target_directive
          | expression_statement
          | return_statement ;

(* Declarations *)

function_decl = [ "async" ] "fn" identifier [ type_params ] "(" [ parameters ] ")" [ "->" type ] block ;

skill_decl = "skill" identifier "{" { skill_body } "}" ;
skill_body = "prompt" ":" ( string | prompt_literal )
           | "loop" "until" "goal" ":" string block ;

resource_decl = "resource" identifier [ type_params ] "=" "{" { struct_field } "}" ;

struct_decl = "struct" identifier [ type_params ] "{" { struct_field } "}" ;
struct_field = identifier ":" type [ "," ] ;

enum_decl = "enum" identifier "{" { identifier [ "," ] } "}" ;

trait_decl = ( "trait" | "protocol" ) identifier "{" { function_sig } "}" ;
function_sig = "fn" identifier "(" [ parameters ] ")" [ "->" type ] ";" ;

impl_block = "impl" identifier [ "for" identifier ] "{" { function_decl } "}" ;

(* Statements *)

let_statement = ( "let" | "const" ) [ "mut" ] identifier [ ":" type ] "=" expression ";" ;

if_statement = "if" expression block [ "else" ( if_statement | block ) ] ;

match_statement = "match" expression "{" { match_arm } "}" ;
match_arm = expression "=>" ( expression | block ) [ "," ] ;

loop_until = "loop" "until" "goal" ":" string block ;

secure_block = "secure" block ;

target_directive = "@" identifier [ block ] ;

expression_statement = expression ";" ;

return_statement = "return" expression ";" ;

(* AI & Blockchain Primitives *)

swarm_statement = "swarm" "{" { swarm_step } "}" ;
swarm_step = identifier [ ":" expression ] [ "@" identifier ] [ "=>" expression ] [ "," ] ;

meta_digital_decl = "meta-digital" string "{" { meta_digital_field } "}" ;
meta_digital_field = ( "chain" | "ethics" | "output" ) ":" ( expression | "[" { expression [ "," ] } "]" ) [ ";" ] ;

app_statement = "app" "{" { app_field } "}" ;
app_field = identifier ":" expression [ "," ] ;

mint_statement = "mint" [ expression ] ";" ;
receipt_statement = "receipt" [ expression ] ";" ;
seal_statement = "seal" ";" ;
walrus_statement = "walrus" [ expression ] ";" ;

(* Expressions *)

expression = assignment ;

assignment = [ identifier "=" ] logical_or ;

logical_or = logical_and { "||" logical_and } ;
logical_and = equality { "&&" equality } ;
equality = relational { ( "==" | "!=" ) relational } ;
relational = additive { ( "<" | "<=" | ">" | ">=" ) additive } ;
additive = multiplicative { ( "+" | "-" ) multiplicative } ;
multiplicative = unary { ( "*" | "/" | "%" ) unary } ;

unary = [ "!" | "-" | "await" | "<-" | "&" ] postfix ;

postfix = primary { call | field_access | method_call | pipe } ;

call = "(" [ arguments ] ")" ;
field_access = "." identifier ;
method_call = "." identifier "(" [ arguments ] ")" ;
pipe = "|>" identifier [ "(" [ arguments ] ")" ] ;

arguments = expression { "," expression } ;

primary = identifier
        | number
        | string
        | boolean
        | nil_literal
        | prompt_literal
        | voice_literal
        | dict_literal
        | list_literal
        | "channel" [ "<" type ">" ] "(" ")"
        | "(" expression ")"
        | block ;

dict_literal = "{" [ dict_fields ] "}" ;
dict_fields = identifier ":" expression { "," dict_fields } ;

list_literal = "[" [ arguments ] "]" ;

prompt_literal = "%%" { any_character } [ "%%" ] ;
voice_literal = "[voice:" string "]" ;

boolean = "true" | "false" ;
nil_literal = "nil" | "none" ;

(* Types *)

type = identifier [ type_params ]
     | "[" type "]"
     | "Option" "<" type ">"
     | "Result" "<" type "," type ">" ;

type_params = "<" identifier { "," identifier } ">" ;

(* Lexical components *)

block = "{" { statement } "}" ;

identifier = letter { letter | digit | "_" } ;
number = digit { digit } [ "." { digit } ] ;
string = '"' { any_character_except_quote } '"'
       | "'" { any_character_except_single_quote } "'" ;

letter = "a" | ... | "z" | "A" | ... | "Z" ;
digit = "0" | ... | "9" ;
any_character = ? all visible characters ? ;
